--- a/src/components/LoadCharacters/LoadCharacters.css
+++ b/src/components/LoadCharacters/LoadCharacters.css
@@ -1,5 +1,5 @@
 .load-characters {
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .no-characters {
@@ -16,4 +16,16 @@
 
 .buttons a {
   margin-right: 1rem;
+}
+
+.masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -30px; /* gutter size offset */
+  width: auto;
+}
+.masonry-grid_column {
+  padding-left: 30px; /* gutter size */
+  background-clip: padding-box;
 }
