--- a/src/components/LoadCharacters/CharacterCard.css
+++ b/src/components/LoadCharacters/CharacterCard.css
@@ -2,3 +2,15 @@
   margin-bottom: 2rem;
   border-color: #212529;
 }
+
+.card-title {
+  margin-bottom: 1.5rem;
+}
+
+.card-buttons {
+  margin-top: 1.5rem;
+}
+
+.card-buttons a {
+  margin-right: 1rem;
+}
